@@ -1,3 +1,12 @@
+2017-12-16  Torbjörn Granlund  <tg@gmplib.org>
+
+	* mpn/x86_64/fastsse/com.asm: Adhere to DOS64 xmm callee-saves rules.
+	* mpn/x86_64/fastsse/com-palignr.asm: Likewise.
+	* mpn/x86_64/fastsse/copyd.asm: Likewise.
+	* mpn/x86_64/fastsse/copyi.asm: Likewise.
+	* mpn/x86_64/fastsse/lshiftc.asm: Likewise.
+	* mpn/x86_64/fastsse/sec_tabselect.asm: Likewise.
+
 2017-09-08  Torbjörn Granlund  <tg@gmplib.org>
 
 	* configure.ac: Set GMP_NONSTD_ABI protecting against dots in the abi.
